Wed Jun  5 00:21:54 2013  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* lib/irb/lc/ja/help-message: update help messages.
	  following r41028. [ruby-dev:46707] [Feature #7510]

Wed Jun  5 00:09:32 2013  Tanaka Akira  <akr@fsij.org>

	* marshal.c (r_object0): Generalize a round up expression.
	  Use BDIGIT instead of int.

Tue Jun  4 23:44:02 2013  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* object.c (rb_Hash): fix docs. patched by Stefan Schüßler.
	  [ruby-core:55299] [Bug #8487]

Tue Jun  4 23:16:49 2013  Benoit Daloze  <eregontp@gmail.com>

	* lib/irb/completion.rb: Use %w literal construction for long lists.
	  Patch by Dave Goodchild. [Fixes GH-299]

Tue Jun  4 23:08:42 2013  Benoit Daloze  <eregontp@gmail.com>

	* ext/objspace/objspace.c: improve wording and remove duplicated comment.
	  Based on a patch by Dave Goodchild. [Fixes GH-299]

Tue Jun  4 18:41:47 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bitlength_bdigit): Fix an off-by-one error.

Tue Jun  4 15:30:00 2013  Kenta Murata  <mrkn@cookpad.com>

	* ext/bigdecimal/lib/bigdecimal/util.rb (Float#to_d): fix the number
	  of figures.  Patch by Vipul A M <vipulnsward@gmail.com>.
	  https://github.com/ruby/ruby/pull/323  fix GH-323

	* test/bigdecimal/test_bigdecimal_util.rb: fix for the above change.

Tue Jun  4 00:44:27 2013  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/fileutils/test_fileutils.rb (TestFileUtils#test_mkdir): add
	  EEXIST for Linux. (suggested by nurse)

Mon Jun  3 23:58:19 2013  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* lib/fileutils.rb (FileUtils.rmdir): use remove_tailing_slash.
	* test/fileutils/test_fileutils.rb: test for above.

Mon Jun  3 23:47:55 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bitlength_bdigit): New function.
	  (rb_big_pow): Use bitlength_bdigit instead of ffs.

Mon Jun  3 23:11:19 2013  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* lib/fileutils.rb: fix behavior when mkdir/mkdir_p accepted "/".
	* test/fileutils/test_fileutils.rb: add test for above change.